Fixed form width on mobile

--- a/wp-content/themes/argento/css/style.css
+++ b/wp-content/themes/argento/css/style.css
@@ -2845,7 +2845,8 @@ form .rc-anchor-dark.argento {
 
 .newsletter-form.cronograma {
   background: url("/wp-content/themes/argento/img/header-bg.jpg") center;
-  padding: 5px 0 0 40px; }
+  padding: 5px 20px;
+  margin-bottom: 20px; }
 
 /*--------------------------------------------------------------
 # Elements
