--- a/wp-content/themes/argento/sass/forms/_forms.scss
+++ b/wp-content/themes/argento/sass/forms/_forms.scss
@@ -118,5 +118,6 @@ form {
 // Form Newsletter
 .newsletter-form.cronograma {
   background: url("/wp-content/themes/argento/img/header-bg.jpg") center;
-  padding: 5px 0 0 40px;
+  padding: 5px 20px;
+  margin-bottom: 20px;
 }
